--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.8.3)
 project(ecn_visualodom)
 
 add_compile_options(-std=c++11)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
 
+set(CMAKE_BUILD_TYPE DEBUG)
 find_package(VISP REQUIRED)
 find_package(OpenCV 3 REQUIRED)
 
